maple-core-macro/tests/ui/component-fail.stderr
error: expected function call expression
  --> $DIR/component-fail.rs:14:17
   |
14 |     template! { Component };
   |                 ^^^^^^^^^

error[E0425]: cannot find function, tuple struct or tuple variant `UnknownComponent` in this scope
  --> $DIR/component-fail.rs:12:17
   |
12 |     template! { UnknownComponent() };
   |                 ^^^^^^^^^^^^^^^^ not found in this scope

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/component-fail.rs:15:17
   |
15 |     template! { Component(1) };
   |                 ^^^^^^^^^ - supplied 1 argument
   |                 |
   |                 expected 0 arguments
   |
note: function defined here
  --> $DIR/component-fail.rs:5:4
   |
5  | fn Component() -> TemplateResult {
   |    ^^^^^^^^^
